i18n nav bar to bulgarian

--- a/taskmaster/src/main/resources/i18n/messages_en.properties
+++ b/taskmaster/src/main/resources/i18n/messages_en.properties
@@ -9,6 +9,7 @@ validation.user.email.not.valid=Not valid email format
 validation.match.field=Field must match
 validation.field.unique={value} is already occupied
 validation.title.length=Title length must be between 5 and 20 symbols!
+validation.contacts.us.title.length=Title length must be between 5 and 200 symbols!
 validation.description.length=Description length must be between 5 and 2000 symbols!
 validation.contact.us.message.length=Message length must be between 12 and 2000 symbols!
 validation.question.answer.code.length=Code length must be no more of 2000 symbols!
@@ -20,3 +21,16 @@ validation.task.dueDate.not.null=Specify due date!
 validation.task.dueDate.future.or.present=Select date in future or today!
 validation.task.time.not.null=Specify time!
 validation.task.invalid.start.and.end.time=Start time must be before end time!
+
+nav_add_task=Add Task
+nav_ask_question=Ask Question
+nav_questions=Questions
+nav_about=About
+nav_contacts=Contacts
+nav_admin=Admin
+nav_language=Language
+nav_login=Login
+nav_register=Register
+nav_logout=Logout
+nav_all_users=All users
+nav_statistics=Statistics
