--- a/taskmaster/src/main/resources/i18n/messages_bg.properties
+++ b/taskmaster/src/main/resources/i18n/messages_bg.properties
@@ -1,26 +1,26 @@
-validation.user.username.unique=Username is already occupied
-validation.user.email.unique=Email is already occupied
-validation.user.username.length=Username length must be between 5 and 15 symbols!
-validation.user.full.name.length=Full name length must be between 5 and 30 symbols!
-validation.user.password.length=Password length must be between 5 and 30
-validation.user.age.positive=Age must be positive
-validation.user.passwords.not.match=Password must match
-validation.user.email.not.valid=Not valid email format
-validation.match.field=Field must match
-validation.field.unique={value} is already occupied
-validation.title.length=Title length must be between 5 and 20 symbols!
-validation.contacts.us.title.length=Дължината на заглавието трябва да бъде между 5 и 200 симбола.
-validation.description.length=Description length must be between 5 and 2000 symbols!
-validation.contact.us.message.length=Message length must be between 12 and 2000 symbols!
-validation.question.answer.code.length=Code length must be no more of 2000 symbols!
-validation.question.tags.not.empty=Specify at least one tage!
-validation.task.name.length=Name length must be between 5 and 20 symbols!
-validation.task.category.length=Name length must be between 5 and 20 symbols!
-validation.task.priority.not.null=Specify priority!
-validation.task.dueDate.not.null=Specify due date!
-validation.task.dueDate.future.or.present=Select date in future or today!
-validation.task.time.not.null=Specify time!
-validation.task.invalid.start.and.end.time=Start time must be before end time!
+validation.user.username.unique=Потребителското име вече е заето
+validation.user.email.unique=Имейл адресът вече е зает
+validation.user.username.length=Дължината на потребителското име трябва да бъде между 5 и 15 символа!
+validation.user.full.name.length=Дължината на пълното име трябва да бъде между 5 и 30 символа!
+validation.user.password.length=Дължината на паролата трябва да бъде между 5 и 30
+validation.user.age.positive=Годините трябва да полижителни!
+validation.user.passwords.not.match=Паролатите  трябва да съвпадат
+validation.user.email.not.valid=Невалиден емайл адрес
+validation.match.field=Полетата не съзвпадат
+validation.field.unique=Полето е вече заето
+validation.title.length=Дължината на заглавието трябва да бъде между 5 и 20 символа!
+validation.contacts.us.title.length=Дължината на заглавието трябва да бъде между 5 и 200 символа.
+validation.description.length=Дължината на описанието трябва да бъде между 5 и 2000 символа!
+validation.contact.us.message.length=Дължината на съобщението трябва да бъде между 12 и 2000 символа!
+validation.question.answer.code.length=Дължината на кода не трябва да надвишава 2000 символа!
+validation.question.tags.not.empty=Посочете поне един етикет!
+validation.task.name.length=Дължината на името трябва да бъде между 5 и 20 символа!
+validation.task.category.length=Дължината на категорията трябва да бъде между 5 и 20 символа!
+validation.task.priority.not.null=Посочете приоритет!
+validation.task.dueDate.not.null=Посочете ден за задачата!
+validation.task.dueDate.future.or.present=Изберете дата в бъдеще или днес!
+validation.task.time.not.null=Посочете време!
+validation.task.invalid.start.and.end.time=Началният час трябва да е преди крайния!
 
 nav_add_task=Добави задача
 nav_ask_question=Задайте въпрос
