--- a/taskmaster/src/main/resources/i18n/messages_en.properties
+++ b/taskmaster/src/main/resources/i18n/messages_en.properties
@@ -7,7 +7,7 @@ validation.user.age.positive=Age must be positive
 validation.user.passwords.not.match=Password must match
 validation.user.email.not.valid=Not valid email format
 validation.match.field=Field must match
-validation.field.unique={value} is already occupied
+validation.field.unique=Field is already occupied
 validation.title.length=Title length must be between 5 and 20 symbols!
 validation.contacts.us.title.length=Title length must be between 5 and 200 symbols!
 validation.description.length=Description length must be between 5 and 2000 symbols!
