Remove option on admin to edit and change password instead user can do it

--- a/taskmaster/src/main/resources/i18n/messages_bg.properties
+++ b/taskmaster/src/main/resources/i18n/messages_bg.properties
@@ -1,26 +1,27 @@
 validation.user.username.unique=Потребителското име вече е заето
 validation.user.email.unique=Имейл адресът вече е зает
-validation.user.username.length=Дължината на потребителското име трябва да бъде между 5 и 15 символа!
-validation.user.full.name.length=Дължината на пълното име трябва да бъде между 5 и 30 символа!
-validation.user.password.length=Дължината на паролата трябва да бъде между 5 и 30
-validation.user.age.positive=Годините трябва да полижителни!
+validation.user.username.length=Дължината на потребителското име трябва да бъде между 5 и 15 символа
+validation.user.full.name.length=Дължината на пълното име трябва да бъде между 5 и 30 символа
+validation.user.password.length=Дължината на паролата трябва да бъде между 5 и 3
+validation.user.age.positive=Годините трябва да полижителни
 validation.user.passwords.not.match=Паролатите  трябва да съвпадат
+validation.wrong.password=Невалидна парола
 validation.user.email.not.valid=Невалиден емайл адрес
 validation.match.field=Полетата не съзвпадат
 validation.field.unique=Полето е вече заето
-validation.title.length=Дължината на заглавието трябва да бъде между 5 и 20 символа!
-validation.contacts.us.title.length=Дължината на заглавието трябва да бъде между 5 и 200 символа.
-validation.description.length=Дължината на описанието трябва да бъде между 5 и 2000 символа!
-validation.contact.us.message.length=Дължината на съобщението трябва да бъде между 12 и 2000 символа!
-validation.question.answer.code.length=Дължината на кода не трябва да надвишава 2000 символа!
-validation.question.tags.not.empty=Посочете поне един етикет!
-validation.task.name.length=Дължината на името трябва да бъде между 5 и 20 символа!
-validation.task.category.length=Дължината на категорията трябва да бъде между 5 и 20 символа!
-validation.task.priority.not.null=Посочете приоритет!
-validation.task.dueDate.not.null=Посочете ден за задачата!
-validation.task.dueDate.future.or.present=Изберете дата в бъдеще или днес!
-validation.task.time.not.null=Посочете време!
-validation.task.invalid.start.and.end.time=Началният час трябва да е преди крайния!
+validation.title.length=Дължината на заглавието трябва да бъде между 5 и 20 символа
+validation.contacts.us.title.length=Дължината на заглавието трябва да бъде между 5 и 200 символа
+validation.description.length=Дължината на описанието трябва да бъде между 5 и 2000 символа
+validation.contact.us.message.length=Дължината на съобщението трябва да бъде между 12 и 2000 символа
+validation.question.answer.code.length=Дължината на кода не трябва да надвишава 2000 символа
+validation.question.tags.not.empty=Посочете поне един етикет
+validation.task.name.length=Дължината на името трябва да бъде между 5 и 20 символа
+validation.task.category.length=Дължината на категорията трябва да бъде между 5 и 20 символа
+validation.task.priority.not.null=Посочете приоритет
+validation.task.dueDate.not.null=Посочете ден за задачата
+validation.task.dueDate.future.or.present=Изберете дата в бъдеще или днес
+validation.task.time.not.null=Посочете време
+validation.task.invalid.start.and.end.time=Началният час трябва да е преди крайния
 
 nav_add_task=Добави задача
 nav_ask_question=Задайте въпрос
@@ -34,3 +35,7 @@ nav_register=Регистравия
 nav_logout=Илзизане
 nav_all_users=Всички потребители
 nav_statistics=Статистика
+nav_profile=Профил
+nav_edit=Редактиране
+nav_change_password=Смяна на парола
+
