--- a/taskmaster/src/main/resources/i18n/messages_en.properties
+++ b/taskmaster/src/main/resources/i18n/messages_en.properties
@@ -1,26 +1,27 @@
 validation.user.username.unique=Username is already occupied
-validation.user.email.unique=Email is already occupied
-validation.user.username.length=Username length must be between 5 and 15 symbols!
-validation.user.full.name.length=Full name length must be between 5 and 30 symbols!
+validation.email.unique=Email is already occupied
+validation.user.username.length=Username length must be between 5 and 15 symbols
+validation.user.full.name.length=Full name length must be between 5 and 30 symbols
 validation.user.password.length=Password length must be between 5 and 30
 validation.user.age.positive=Age must be positive
 validation.user.passwords.not.match=Password must match
+validation.wrong.password=Wrong password
 validation.user.email.not.valid=Not valid email format
 validation.match.field=Field must match
 validation.field.unique=Field is already occupied
-validation.title.length=Title length must be between 5 and 20 symbols!
-validation.contacts.us.title.length=Title length must be between 5 and 200 symbols!
-validation.description.length=Description length must be between 5 and 2000 symbols!
-validation.contact.us.message.length=Message length must be between 12 and 2000 symbols!
-validation.question.answer.code.length=Code length must be no more of 2000 symbols!
-validation.question.tags.not.empty=Specify at least one tage!
-validation.task.name.length=Name length must be between 5 and 20 symbols!
-validation.task.category.length=Name length must be between 5 and 20 symbols!
-validation.task.priority.not.null=Specify priority!
-validation.task.dueDate.not.null=Specify due date!
-validation.task.dueDate.future.or.present=Select date in future or today!
-validation.task.time.not.null=Specify time!
-validation.task.invalid.start.and.end.time=Start time must be before end time!
+validation.title.length=Title length must be between 5 and 20 symbols
+validation.contacts.us.title.length=Title length must be between 5 and 200 symbols
+validation.description.length=Description length must be between 5 and 2000 symbols
+validation.contact.us.message.length=Message length must be between 12 and 2000 symbols
+validation.question.answer.code.length=Code length must be no more of 2000 symbols
+validation.question.tags.not.empty=Specify at least one tage
+validation.task.name.length=Name length must be between 5 and 20 symbols
+validation.task.category.length=Name length must be between 5 and 20 symbols
+validation.task.priority.not.null=Specify priority
+validation.task.dueDate.not.null=Specify due date
+validation.task.dueDate.future.or.present=Select date in future or today
+validation.task.time.not.null=Specify time
+validation.task.invalid.start.and.end.time=Start time must be before end time
 
 nav_add_task=Add Task
 nav_ask_question=Ask Question
@@ -34,3 +35,6 @@ nav_register=Register
 nav_logout=Logout
 nav_all_users=All users
 nav_statistics=Statistics
+nav_profile=Profile
+nav_edit=Edit
+nav_change_password=Change password
