--- a/taskmaster/src/main/resources/i18n/messages_en.properties
+++ b/taskmaster/src/main/resources/i18n/messages_en.properties
@@ -6,6 +6,7 @@ validation.user.password.length=Password length must be between 5 and 30
 validation.user.age.positive=Age must be positive
 validation.user.passwords.not.match=Password must match
 validation.wrong.password=Wrong password
+validation.change.to.same.password=New Password cannot be same as your current password
 validation.user.email.not.valid=Not valid email format
 validation.match.field=Field must match
 validation.field.unique=Field is already occupied
