Edit how to show error messages and validation annotation validators

--- a/taskmaster/src/main/resources/i18n/messages_en.properties
+++ b/taskmaster/src/main/resources/i18n/messages_en.properties
@@ -22,7 +22,8 @@ validation.task.priority.not.null=Specify priority
 validation.task.dueDate.not.null=Specify due date
 validation.task.dueDate.future.or.present=Select date in future or today
 validation.task.time.not.null=Specify time
-validation.task.invalid.start.and.end.time=Start time must be before end time
+validation.task.start.time.before.end.time=Start time must be before end time
+validation.task.end.time.after.start.time=End time must be after start time
 
 nav_add_task=Add Task
 nav_ask_question=Ask Question
