--- a/taskmaster/src/main/resources/i18n/messages_en.properties
+++ b/taskmaster/src/main/resources/i18n/messages_en.properties
@@ -32,11 +32,18 @@ nav_about=About
 nav_contacts=Contacts
 nav_admin=Admin
 nav_language=Language
-nav_login=Login
-nav_register=Register
 nav_logout=Logout
 nav_all_users=All users
 nav_statistics=Statistics
 nav_profile=Profile
-nav_edit=Edit
-nav_change_password=Change password
+login_label=Login
+register_label=Register
+edit_label=Edit
+change_password_label=Change password
+login_username=Username
+login_username_placeholder=Enter your username
+login_password=Password
+login_password_placeholder=Enter your password
+login_bad_credential=Incorrect username or password
+
+
