--- a/taskmaster/src/main/resources/i18n/messages_en.properties
+++ b/taskmaster/src/main/resources/i18n/messages_en.properties
@@ -1,5 +1,5 @@
 validation.user.username.unique=Username is already occupied
-validation.email.unique=Email is already occupied
+validation.user.email.unique=Email is already occupied
 validation.user.username.length=Username length must be between 5 and 15 symbols
 validation.user.full.name.length=Full name length must be between 5 and 30 symbols
 validation.user.password.length=Password length must be between 5 and 30
@@ -27,7 +27,7 @@ validation.task.end.time.after.start.time=End time must be after start time
 
 nav_add_task=Add Task
 nav_ask_question=Ask Question
-nav_questions=Questions
+nav_questions=Open Questions
 nav_about=About
 nav_contacts=Contacts
 nav_admin=Admin
@@ -40,10 +40,20 @@ login_label=Login
 register_label=Register
 edit_label=Edit
 change_password_label=Change password
-login_username=Username
-login_username_placeholder=Enter your username
-login_password=Password
-login_password_placeholder=Enter your password
+username_label=Username
+username_placeholder=Enter your username
+password_label=Password
+password_placeholder=Enter your password
 login_bad_credential=Incorrect username or password
+full_name_label=Full name
+full_name_placeholder=Enter your full name
+email_label=Email
+email_placeholder=Enter your email
+age_label=Age
+age_placeholder=Enter your age
+confirm_password_label=Confirm password
+confirm_password_placeholder=Confirm your password
+
+
 
 
