--- a/taskmaster/src/main/resources/i18n/messages_en.properties
+++ b/taskmaster/src/main/resources/i18n/messages_en.properties
@@ -15,9 +15,9 @@ validation.contacts.us.title.length=Title length must be between 5 and 200 symbo
 validation.description.length=Description length must be between 5 and 2000 symbols
 validation.contact.us.message.length=Message length must be between 12 and 2000 symbols
 validation.question.answer.code.length=Code length must be no more of 2000 symbols
-validation.question.tags.not.empty=Specify at least one tage
+validation.question.tags.not.empty=Specify at least one tag
 validation.task.name.length=Name length must be between 5 and 20 symbols
-validation.task.category.length=Name length must be between 5 and 20 symbols
+validation.task.category.length=Category length must be between 5 and 20 symbols
 validation.task.priority.not.null=Specify priority
 validation.task.dueDate.not.null=Specify due date
 validation.task.dueDate.future.or.present=Select date in future or today
