Аdd validation for question tags.

--- a/taskmaster/src/main/resources/i18n/messages_bg.properties
+++ b/taskmaster/src/main/resources/i18n/messages_bg.properties
@@ -10,12 +10,13 @@ validation.change.to.same.password=Новата парола не може да 
 validation.user.email.not.valid=Невалиден емайл адрес
 validation.match.field=Полетата не съзвпадат
 validation.field.unique=Полето е вече заето
-validation.title.length=Дължината на заглавието трябва да бъде между 5 и 20 символа
+validation.title.length=Дължината на заглавието трябва да бъде между 5 и 50 символа
 validation.contacts.us.title.length=Дължината на заглавието трябва да бъде между 5 и 200 символа
 validation.description.length=Дължината на описанието трябва да бъде между 5 и 2000 символа
 validation.contact.us.message.length=Дължината на съобщението трябва да бъде между 12 и 2000 символа
 validation.question.answer.code.length=Дължината на кода не трябва да надвишава 2000 символа
-validation.question.tags.not.empty=Посочете поне един етикет
+validation.question.tags.not.empty=Посочете поне един таг
+validation.question.invalid.tags=Не повтаряйте тагове и посочете максимум 5 тага
 validation.task.name.length=Дължината на името трябва да бъде между 5 и 20 символа
 validation.task.category.length=Дължината на категорията трябва да бъде между 5 и 20 символа
 validation.task.priority.not.null=Посочете приоритет
@@ -23,7 +24,6 @@ validation.task.dueDate.not.null=Посочете ден за задачата
 validation.task.dueDate.future.or.present=Изберете дата в бъдеще или днес
 validation.task.time.not.null=Посочете време
 validation.task.invalid.start.and.end.time=Началният час трябва да е преди крайния
-
 nav_add_task=Добавяне на задача
 nav_ask_question=Задай въпрос
 nav_questions=Отворени Въпроси
