--- a/taskmaster/src/main/resources/i18n/messages_en.properties
+++ b/taskmaster/src/main/resources/i18n/messages_en.properties
@@ -10,12 +10,13 @@ validation.change.to.same.password=New Password cannot be same as your current p
 validation.user.email.not.valid=Not valid email format
 validation.match.field=Field must match
 validation.field.unique=Field is already occupied
-validation.title.length=Title length must be between 5 and 20 symbols
+validation.title.length=Title length must be between 5 and 50 symbols
 validation.contacts.us.title.length=Title length must be between 5 and 200 symbols
 validation.description.length=Description length must be between 5 and 2000 symbols
 validation.contact.us.message.length=Message length must be between 12 and 2000 symbols
 validation.question.answer.code.length=Code length must be no more of 2000 symbols
 validation.question.tags.not.empty=Specify at least one tag
+validation.question.invalid.tags=Not repeat tags and specify maximum 5 tags
 validation.task.name.length=Name length must be between 5 and 20 symbols
 validation.task.category.length=Category length must be between 5 and 20 symbols
 validation.task.priority.not.null=Specify priority
@@ -24,7 +25,6 @@ validation.task.dueDate.future.or.present=Select date in future or today
 validation.task.time.not.null=Specify time
 validation.task.start.time.before.end.time=Start time must be before end time
 validation.task.end.time.after.start.time=End time must be after start time
-
 nav_add_task=Add Task
 nav_ask_question=Ask Question
 nav_questions=Open Questions
