--- a/taskmaster/src/main/resources/i18n/messages_en.properties
+++ b/taskmaster/src/main/resources/i18n/messages_en.properties
@@ -35,7 +35,7 @@ nav_language=Language
 nav_logout=Logout
 nav_all_users=All users
 nav_statistics=Statistics
-nav_profile=Profile
+nav_delete_profile=Delete profile
 login_label=Login
 register_label=Register
 edit_label=Edit
