--- a/taskmaster/src/main/resources/i18n/messages_bg.properties
+++ b/taskmaster/src/main/resources/i18n/messages_bg.properties
@@ -34,7 +34,7 @@ nav_language=Език
 nav_logout=Изход
 nav_all_users=Всички потребители
 nav_statistics=Статистки
-nav_delete_profile=Изтрий акунт
+nav_delete_account=Изтрий акунт
 login_label=Вход
 register_label=Регистрирайте се
 edit_label=Редактиране
