--- a/taskmaster/src/main/resources/i18n/messages_en.properties
+++ b/taskmaster/src/main/resources/i18n/messages_en.properties
@@ -35,6 +35,7 @@ nav_language=Language
 nav_logout=Logout
 nav_all_users=All users
 nav_statistics=Statistics
+nav_mail_history=Mail History
 nav_delete_account=Delete account
 login_label=Login
 register_label=Register
