Add @ValidPriority validation annotation for task priority.

--- a/taskmaster/src/main/resources/i18n/messages_bg.properties
+++ b/taskmaster/src/main/resources/i18n/messages_bg.properties
@@ -19,7 +19,7 @@ validation.question.tags.not.empty=Посочете поне един таг
 validation.question.invalid.tags=Не повтаряйте тагове и посочете максимум 5 тага
 validation.task.name.length=Дължината на името трябва да бъде между 5 и 20 символа
 validation.task.category.length=Дължината на категорията трябва да бъде между 5 и 20 символа
-validation.task.priority.not.null=Посочете приоритет
+validation.task.priority.not.valid=Посочете валиден приоритет
 validation.task.dueDate.not.null=Посочете ден за задачата
 validation.task.dueDate.future.or.present=Изберете дата в бъдеще или днес
 validation.task.time.not.null=Посочете време
