--- a/taskmaster/src/main/resources/i18n/messages_en.properties
+++ b/taskmaster/src/main/resources/i18n/messages_en.properties
@@ -19,7 +19,7 @@ validation.question.tags.not.empty=Specify at least one tag
 validation.question.invalid.tags=Not repeat tags and specify maximum 5 tags
 validation.task.name.length=Name length must be between 5 and 20 symbols
 validation.task.category.length=Category length must be between 5 and 20 symbols
-validation.task.priority.not.null=Specify priority
+validation.task.priority.not.valid=Specify valid priority
 validation.task.dueDate.not.null=Specify due date
 validation.task.dueDate.future.or.present=Select date in future or today
 validation.task.time.not.null=Specify time
