Rename edit page to profile page and change end points and content where is needed

--- a/taskmaster/src/main/resources/i18n/messages_bg.properties
+++ b/taskmaster/src/main/resources/i18n/messages_bg.properties
@@ -38,7 +38,7 @@ nav_mail_history=История на майлите
 nav_delete_account=Изтрий акунт
 login_label=Вход
 register_label=Регистрирайте се
-edit_label=Редактиране
+profile_label=Профил
 change_password_label=Смяна на паролата
 username_label=Потребителско име
 username_placeholder=Въведете вашето потребителско име
