--- a/taskmaster/src/main/resources/i18n/messages_en.properties
+++ b/taskmaster/src/main/resources/i18n/messages_en.properties
@@ -39,7 +39,7 @@ nav_mail_history=Mail History
 nav_delete_account=Delete account
 login_label=Login
 register_label=Register
-edit_label=Edit
+profile_label=Profile
 change_password_label=Change password
 username_label=Username
 username_placeholder=Enter your username
